--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
         <hr/>
           <label for="email"> Email or username </label>
         <input
-          class="box"
+          class="box grey"
           type="text"
           placeholder="Email or username"
           id="email"
         />
         <label for="pass"> Password </label>
-        <input class="box" type="password" placeholder="Password" id="pass" />
+        <input class="box grey" type="password" placeholder="Password" id="pass" />
         <span class="remember">
           <input class="check" type="checkbox"/>
           <label for="check">Remember me</label>
